fix: icon not aligned with title in callout

--- a/.obsidian/snippets/obsidian_orange.css
+++ b/.obsidian/snippets/obsidian_orange.css
@@ -1462,3 +1462,8 @@ a[href*="obsidian://search"] {
 .markdown-source-view.mod-cm6 .cm-table-widget table tbody tr:hover {
   background: #f2f6fc;
 }
+
+/* fix callout icon 与标题没有对齐 */
+.callout-title {
+  align-items: center;
+}
